# tinytrainer

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  SHIP_GATE.md  pyproject.toml  verify.sh
.github/workflows/: ci.yml
site/: astro.config.mjs  package-lock.json
site/src/: site-config.ts
site/src/content/docs/handbook/: architecture.md  getting-started.md  index.md  reference.md  usage.md
site/src/styles/: starlight-custom.css
src/tinytrainer/: __init__.py  __main__.py  _types.py  cli.py  errors.py
src/tinytrainer/backbone/: __init__.py  embedder.py
src/tinytrainer/data/: __init__.py  dataset.py  loader.py  prepare.py
src/tinytrainer/eval/: __init__.py  report.py  runner.py
src/tinytrainer/export/: __init__.py  coreml.py  kit.py  onnx.py
src/tinytrainer/models/: __init__.py  _base.py  classifier.py
src/tinytrainer/schema/: __init__.py  config.py  kit.py  result.py
src/tinytrainer/training/: __init__.py  early_stopping.py  loop.py  metrics.py
tests/: conftest.py  test_backbone.py  test_cli.py  test_data.py  test_export_onnx.py  test_kit.py  test_models.py  test_schema.py  test_training.py
