[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinytrainer"
version = "1.0.0"
description = "Desktop training foundry + mobile personalization export pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = ["training", "mobile", "coreml", "onnx", "edge-ai", "small-models", "fine-tuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "edgepacks>=0.1.0",
    "torch>=2.2.0",
    "sentence-transformers>=3.0.0",
    "onnx>=1.15.0",
    "pydantic>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
coreml = ["coremltools>=7.0"]
onnxrt = ["onnxruntime>=1.17.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.0",
    "onnxruntime>=1.17.0",
]

[project.scripts]
tinytrainer = "tinytrainer.cli:app"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/tinytrainer"
Repository = "https://github.com/mcp-tool-shop-org/tinytrainer"
Issues = "https://github.com/mcp-tool-shop-org/tinytrainer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tinytrainer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "-ra", "--strict-markers"]
markers = [
    "unit: fast isolated tests",
    "integration: tests that need real sentence-transformers model",
    "slow: tests that involve coremltools or long training",
    "export: tests for export pipeline",
]
